--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -336,7 +336,7 @@
                         <div class="flex flex-col ml-auto">
                           <form action="/pay" method="post">
                             <input type="submit" value="Buy" onclick="confirmSeats(), bookSeats()"
-                              class="px-4 py-2 mt-2 font-bold text-white bg-green-500 rounded hover:bg-green-600">
+                              class="px-4 py-2 mt-2 font-bold text-white bg-green-500 rounded cursor-pointer hover:bg-green-600">
                           </form>
                         </div>
                       </div>
