update changes - make new admin dashboard - apply changes to cancel and success - get started become to movies

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,7 +88,7 @@
                 <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Welcome to TixOnline</h1>
                 <p class="mb-8 text-lg text-cfab7a">Buy movie tickets online and never miss your favorite movies
                     again!</p>
-                <a href="/register-account"
+                <a href="/movies"
                     class="px-6 py-2 font-normal font-semibold text-black rounded custom-btn">Get
                     Started</a>
             </div>
