--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <title>Admin | Movies</title>
+  <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
