display tittle and total income in admin dashboard

--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -22,7 +22,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
                     </svg>
-                    <div>Welcome, <%= admin.username %>
+                    <div>Welcome, admin
                     </div>
                 </div>
                 <svg id="close" class="hidden w-6 h-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -56,8 +56,8 @@
                     <h2 class="text-2xl font-semibold">Best Selling Movie</h2>
                     <div class="flex items-center justify-between px-6 py-4 mt-4 bg-gray-800 rounded-lg">
                         <div>
-                            <h3 class="text-lg font-semibold text-white">Movie Title</h3>
-                            <p class="text-gray-400">Total Income: $XXX</p>
+                            <h3 class="text-lg font-semibold text-white">Movie Title: <%= movies[0].title %></h3>
+                            <p class="text-gray-400">Total Income: $ <%=totalPrices %></p>
                         </div>
                         <button class="px-4 py-2 text-sm font-semibold text-black rounded-lg bg-cfab7a">View
                             Details</button>
