--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -53,14 +53,16 @@
             <div class="mx-8">
                 <h1 class="mb-4 text-3xl font-semibold">Admin Dashboard</h1>
                 <div class="mt-8">
-                    <h2 class="text-2xl font-semibold">Best Selling Movie</h2>
+                    <h2 class="text-2xl font-semibold">Movie Purchases</h2>
+                    <% movies.forEach((movie, index) => { %>
                     <div class="flex items-center justify-between px-6 py-4 mt-4 bg-gray-800 rounded-lg">
-                        <div>
-                            <h3 class="text-lg font-semibold text-white">Movie Title: <%= movies[0].title %></h3>
-                            <p class="text-gray-400">Total Income: $ <%=totalPrices %></p>
+                            <div>
+                              <h3>Movie Title: <%= movie.title %></h3>
+                              <p>Earning: <%= movie.earning %></p>
+                              <p>Quantity: <%= movie.quantity %></p>
+                            </div>
                         </div>
-                        <button class="px-4 py-2 text-sm font-semibold text-black rounded-lg bg-cfab7a">View
-                            Details</button>
+                        <% }); %>
                     </div>
                 </div>
                 <button class="px-4 py-2 mt-8 text-sm font-semibold text-white bg-red-600 rounded-lg">Logout</button>
